Expand tag support for requirements